--- a/.github/workflows/overview-github.yaml
+++ b/.github/workflows/overview-github.yaml
@@ -1,8 +1,8 @@
-name: Update README.md
+name: Github Overview
 
 on:
   schedule:
-    - cron: '0 */3 * * *'
+    - cron: '*/10 * * * *'
   workflow_dispatch:
 
 jobs:
