--- a/.github/workflows/Readme.yaml
+++ b/.github/workflows/Readme.yaml
@@ -1,4 +1,4 @@
-name: Update README
+name: Default Readme Workflow
 
 on:
   schedule:
@@ -31,14 +31,3 @@ jobs:
         uses: mikeal/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
-      - uses: yoshi389111/github-profile-3d-contrib@0.7.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.repository_owner }}
-      - name: Commit & Push
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add -A .
-          git commit -m "generated"
-          git push
