--- a/.github/workflows/Readme.yaml
+++ b/.github/workflows/Readme.yaml
@@ -2,7 +2,7 @@ name: Default Readme Workflow
 
 on:
   schedule:
-    - cron: '0 */24 * * *'
+    - cron: '0 18 * * *'
   workflow_dispatch:
 
 jobs:
