--- a/.github/workflows/Readme.yaml
+++ b/.github/workflows/Readme.yaml
@@ -1,8 +1,8 @@
-name: Default Readme Workflow
+name: Readme Workflow
 
 on:
   schedule:
-    - cron: '0 18 * * *'
+    - cron: '0 3 * * *'
   workflow_dispatch:
 
 jobs:
