--- a/.github/workflows/Contrib.yml
+++ b/.github/workflows/Contrib.yml
@@ -1,8 +1,8 @@
-name: Profile 3d Contrib
+name: 3D Contributions
 
 on:
-  schedule: # 03:00 JST == 18:00 UTC
-    - cron: "0 18 * * *"
+  schedule: 
+    - cron: "0 3 * * *"
   workflow_dispatch:
 
 jobs:
