--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "thmsgbrt",
+  "name": "themagicalmammal",
   "version": "1.0.0",
-  "description": "A dynamic README.md for your GitHub Profile, using Actions, Javascript and Mustache.",
+  "description": "Dynamic README.md for my GitHub Profile, using Actions, Javascript and Mustache.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thmsgbrt/thmsgbrt.git"
+    "url": "https://github.com/themagicalmammal/themagicalmammal.git"
   },
   "keywords": [
     "readme.md",
@@ -17,12 +17,12 @@
     "dynamic",
     "javascript"
   ],
-  "author": "Thomas Guibert",
+  "author": "Dipan Nanda",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/thmsgbrt/thmsgbrt/issues"
+    "url": "https://github.com/themagicalmammal/themagicalmammal/issues"
   },
-  "homepage": "https://github.com/thmsgbrt/thmsgbrt#readme",
+  "homepage": "https://github.com/themagicalmammal/themagicalmammal#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "mustache": "^4.0.1",
