--- a/renovate.json
+++ b/renovate.json
@@ -12,11 +12,5 @@
             "automerge": true
         }
     ],
-    "prConcurrentLimit": 5,
-    lockFileMaintenance": {
-    "enabled": true,
-    "automerge": true,
-    "automergeType": "pr",
-    "platformAutomerge": true
-  }
+    "prConcurrentLimit": 5
 }
