--- a/.github/workflows/README.yml
+++ b/.github/workflows/README.yml
@@ -1,8 +1,8 @@
-name: Default Readme Workflow
+name: README Workflow
 
 on:
   schedule:
-    - cron: '0 18 * * *'
+    - cron: '0 3 * * *'
   workflow_dispatch:
 
 jobs:
@@ -10,18 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: setup node
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: '13.x'
-      - name: cache
+      - name: Cache
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-js-${{ hashFiles('package-lock.json') }}
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
       - name: Generate README file
         run: node index.js
